feat: sala api done

--- a/src/view/cadAluno.ejs
+++ b/src/view/cadAluno.ejs
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#">Alunos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../CadSala/">Sala</a>
+                        <a class="nav-link" href="../cadSala/">Sala</a>
                     </li>
                 </ul>
             </div>
