--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="./cadAluno">Alunos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./cadSala.ejs">Sala</a>
+                        <a class="nav-link" href="./cadSala">Sala</a>
                     </li>
                 </ul>
             </div>
