--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -60,65 +60,20 @@
         </div>
         <div id="cards" class="container">
             <div class="row d-flex flew-wrap gap-3">
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno1.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Queila Lima</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno2.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Mariana Marques</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno3.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Juliana Purcino</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="img/aluno4.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Nicole Siqueira</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno5.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Eduardo Sampaio</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno6.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Milena Calegari</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno7.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Adrian Gobara</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
+                <% if (alunos && alunos.length > 0) { %>
+                    <% for(let i = 0; i < salas.length; i++) { %>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/aluno1.jpg" class="card-img-top mt-3" alt="Aluno">
+                            <div class="card-body d-flex flex-column align-items-center">
+                              <h5 class="card-title"> <% alunos[i].Nome %> </h5>
+                              <p class="card-text">Idade: <% alunos[i].Idade %> ></p>
+                              <a href="#" class="btn btn-secondary">Editar</a>
+                            </div>
+                    <% } %>
+                <% } else { %>
+                    <option disabled>No rooms available</option>
+                <% } %>
             </div>
-
         </div>
         <img src="img/bosch-line.png" class="fixed-bottom"alt="">
     </main>
