feat: student filter + update stundent beggining

--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -4,11 +4,16 @@ main {
 
 #cards {
     gap: 40px;
-    margin-bottom: 10%;
-    margin-top: 5%;
+    margin-top: 1%;
+    height: 5%;
+    margin-bottom: 5%;
+}
+
+.card {
+    height: 356px ;
 }
 
 .card-img-top {
     border-radius: 16px;
-    height: 50%;
+    min-height: 196px;
 }
