--- a/src/view/cadAluno.ejs
+++ b/src/view/cadAluno.ejs
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <div>
-                    <a class="d-flex gap-2" href="../view/index.ejs">
+                    <a class="d-flex gap-2" href="/">
                         <h4 id="highlight-title">CONTROLE</h4> 
                         <h4> de Estudantes</h4>
                     </a>
@@ -51,7 +51,7 @@
         <div class="row d-flex flex-column align-items-center mb-5">
             <form method="post" class="col-lg-4">
                 <div class="container d-flex flex-column align-items-center">
-                    <label id="avatar-label" for="avatar-input"><img id='avatar-img' src="../../public/img/aluno1.jpg" alt=""></label>
+                    <label id="avatar-label" for="avatar-input"><img id='avatar-img' src="img/user-logo.png" alt=""></label>
                     <input id="avatar-input" name="studentAvatarInput"type="file" class="form-control-file" accept="image/png, image/jpeg" />
                 </div>
                 <div class="mb-3">
@@ -87,7 +87,7 @@
                 <button type="submit" class="btn btn-primary">Cadastrar</button>
             </form>
         </div>
-        <img src="../../images/bosch-line.png" class="fixed-bottom" alt="">
+        <img src="img/bosch-line.png" class="fixed-bottom" alt="">
     </main>
     <footer>
     </footer>
