--- a/src/view/cadSala.ejs
+++ b/src/view/cadSala.ejs
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <div >
-                    <a class="d-flex gap-2" href="../view/index">
+                    <a class="d-flex gap-2" href="/">
                         <h4 id="highlight-title">CONTROLE</h4> 
                         <h4> de Estudantes</h4>
                     </a>
