--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <div >
-                    <a class="d-flex gap-2" href="./index.ejs">
+                    <a class="d-flex gap-2" href="/">
                         <h4 id="highlight-title">CONTROLE</h4> 
                         <h4> de Estudantes</h4>
                     </a>
@@ -33,87 +33,55 @@
                         <h6>Cadastrar:</h6>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./cadAluno">Alunos</a>
+                        <a class="nav-link" href="/cadAluno">Alunos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./cadSala">Sala</a>
+                        <a class="nav-link" href="/cadSala">Sala</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="d-flex flex-column main-container">
-        <div class="container mt-auto">
+        <div class="container mt-2">
             <div class="row justify-content-end">
                 <div class="col-sm-3 mt-5">
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>Selecione a Sala de Aula</option disabled>
-                        <option value="1">DTA</option>
-                        <option value="2">Mecatrônica</option>
-                        <option value="3">Mecânica</option>
-                      </select>
+                    <form method="post" action="/">
+                        <select id="sala" onchange="this.form.submit()" name="nome" class="form-select" aria-label="Default select example">
+                            <option hidden value="">Sala</option>
+                            <% if (salas && salas.length > 0) { %>
+                                <% for(let i = 0; i < salas.length; i++) { %>
+                                    <option value='<%= salas[i].IDSala %>' <%= id == salas[i].IDSala ? 'selected' : ''%>> <%= salas[i].Nome %> </option>
+                                <% } %>
+                            <% } else { %>
+                                <option disabled>Sem salas disponíveis</option>
+                            <% } %>
+                          </select>
+                    </form>
                 </div>
             </div>
         </div>
         <div id="cards" class="container">
-            <div class="row d-flex flew-wrap gap-3">
-
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno1.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Queila Lima</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
+            <div class="row d-flex flew-wrap gap-3 align-items-center">
+                <% if (alunos && alunos.length > 0) { %>
+                    <% for(let i = 0; i < alunos.length; i++) { %>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/<%= alunos[i].Foto %>" class="card-img-top mt-3" alt="Aluno">
+                            <!-- <img src="img/aluno1.jpg" class="card-img-top mt-3" alt="Aluno"> -->
+                            <div class="card-body d-flex flex-column align-items-center">
+                              <h5 class="card-title"> <%= alunos[i].Nome %></h5>
+                              <p class="card-text">Idade: <%= alunos[i].Idade %> </p>
+                              <a href="/editarAluno/<%= alunos[i].IDAluno %>" class="btn btn-secondary">Editar</a>
+                            </div>
+                        </div>
+                    <% } %>
+                <% } else { %>
+                    <div class="row d-flex align-items-center justify-content-center">
+                        <div class="alert alert-primary text-center col-md-4 fw-semibold" role="alert">
+                            Selecione uma sala para visualizar os alunos!
+                          </div>
                     </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno2.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Mariana Marques</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno3.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Juliana Purcino</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="img/aluno4.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Nicole Siqueira</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno5.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Eduardo Sampaio</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno6.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Milena Calegari</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="img/aluno7.jpg" class="card-img-top mt-3" alt="Aluno">
-                    <div class="card-body d-flex flex-column align-items-center">
-                      <h5 class="card-title">Adrian Gobara</h5>
-                      <p class="card-text">Idade: 19</p>
-                      <a href="#" class="btn btn-secondary">Editar</a>
-                    </div>
-                </div>
+                <% } %>
             </div>
 
         </div>
