--- a/src/view/editarAluno.ejs
+++ b/src/view/editarAluno.ejs
@@ -14,15 +14,15 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <!-- STYLESHEETS LINK -->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/header.css">
 
     <!-- ESTILIZAÇÃO PRÓPRIA DA PÁGINA -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/bosch-symbol.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/bosch-symbol.png">
 
     <!-- SCRIPT -->
-    <script src="js/loadPic.js" defer></script>
+    <script src="/js/loadPic.js" defer></script>
 
     <title>Cadastro Alunos</title>
 </head>
@@ -53,37 +53,42 @@
     </header>
     <main class="d-flex flex-column justify-content-center">
         <h2>Editar Informações do Aluno</h2>
-        <form action="/editarAluno/<%= alunos.IDAluno %>" method="post" enctype="multipart/form-data">
-            <div class="max-width">
-                <div class="image-container">
-                    <img src="/img/<%= alunos.Foto %>" alt="Selecione uma imagem" id="imgFoto">
+        <div class="row d-flex flex-column align-items-center mb-5">
+            <form action="/editarAluno/<%= alunos.IDAluno %>" enctype="multipart/form-data" method="post" class="col-lg-4" >
+                <div class="container d-flex flex-column align-items-center">
+                    <label id="avatar-label" for="avatar-input"><img id='avatar-img' src="/img/<%= alunos.Foto %>" alt="Selecione uma imagem"></label>
+                    <input id="avatar-input" name="studentAvatarInput"type="file" class="form-control-file" accept="image/*" />
                 </div>
-                <input type="file" id="flImage" name="foto" accept="image/*">
-            </div>
-            <div class="user-box">
-                <label>Nome</label>
-                <input type="text" value="<%= alunos.Nome %>" name="nome">
-            </div>
-            <div class="user-box">
-                <label>Idade</label>
-                <input type="text" value="<%= alunos.Idade %>" name="idade">
-            </div>
-            <div class="user-box">
-                <label>Sexo</label>
-                <input type="text" value="<%= alunos.Sexo %>" name="sexo">
-            </div>
-            <div class="user-box">
-                <label>Sala</label>
-                <select id="sala" name="sala">
-                    <% for (let i=0; i<salas.length; i++) { %>
-                        <option value='<%= salas[i].IDSala %>' <%=alunos.IDSala==salas[i].IDSala ? 'selected' : '' %>>
-                            <%= salas[i].Nome %>
-                        </option>
-                        <% } %>
-                </select>
-            </div>
-            <input class="btn btn-primary" type="submit" value="Atualizar" />
-            <img src="img/bosch-line.png" class="fixed-bottom" alt="">
+                <div class="mb-3">
+                    <label for="studentNameInput" class="form-label">Nome</label>
+                    <input type="text" class="form-control" name="studentNameInput" value="<%= alunos.Nome %>">
+                </div>
+                <div class="mb-3">
+                    <label for="studentAgeInput" class="form-label">Idade</label>
+                    <input type="number" class="form-control" name="studentAgeInput" value="<%= alunos.Idade %>">
+                </div>
+                <div class="mb-3">
+                    <label for="studentGenderInput" class="form-label">Gênero</label>
+                    <select name="studentGenderInput" class="form-select" aria-label="Default select example">
+                        <option hidden>Gênero</option disabled>
+                        <option value="Feminino" <%= alunos.Sexo == 'Feminino' ? 'selected' : ''%> >Feminino</option>
+                        <option value="Masculino" <%= alunos.Sexo == 'Masculino' ? 'selected' : ''%> >Masculino</option>
+                        <option value="Outro" <%= alunos.Sexo == 'Outro' ? 'selected' : ''%> >Outro</option>
+                      </select>
+                </div>
+                <div class="mb-3">
+                    <label for="studentClassInput" class="form-label">Sala</label>
+                    <select id="studentClassInput" name="studentClassInput" class="form-select" aria-label="Default select example">
+                        <% for (let i=0; i<salas.length; i++) { %>
+                            <option value='<%= salas[i].IDSala %>' <%= alunos.IDSala == salas[i].IDSala ? 'selected' : ''%>> <%=
+                            salas[i].Nome %> </option>
+                            <% } %>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Atualizar</button>
+            </form>
+        </div>
+            <img src="/img/bosch-line.png" class="fixed-bottom" alt="">
     </main>
     <footer>
     </footer>
