--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -43,9 +43,9 @@
         </nav>
     </header>
     <main class="d-flex flex-column main-container">
-        <div class="container mt-2">
-            <div class="row justify-content-end">
-                <div class="col-sm-3 mt-5">
+        <div class="container mt-5">
+            <div class="d-flex flex-row justify-content-end">
+                <div class="col-sm-3 d-flex align-items-center">
                     <form method="post" action="/">
                         <select id="sala" onchange="this.form.submit()" name="nome" class="form-select" aria-label="Default select example">
                             <option hidden value="">Sala</option>
@@ -59,6 +59,9 @@
                           </select>
                     </form>
                 </div>
+                <form action="" class="d-flex align-items-center">
+                    <a href="/editarSala/" class="btn btn-secondary btn-sm <%= alunos.length == 0 ? 'disabled' : '' %>" role="button" aria-disabled="true"> Editar Sala </a> 
+                </form>
             </div>
         </div>
         <div id="cards" class="container">
