--- a/src/view/editarSala.ejs
+++ b/src/view/editarSala.ejs
@@ -43,16 +43,16 @@
     </header>
     <main class="d-flex flex-column justify-content-center">
         <div class="row d-flex flex-column align-items-center">
-            <form action="cadSala" method="post" class="col-lg-4">
+            <form method="post" class="col-lg-4">
                 <div class="mb-3">
                     <label for="room-name-input" class="form-label">Nome da Sala</label>
-                    <input type="text" class="form-control" name="roomNameInput">
+                    <input type="text" class="form-control" name="roomNameInput" value="<%= salas.Nome %>">
                 </div>
                 <div class="mb-3">
                     <label for="room-capacity-input" class="form-label">Capacidade</label>
-                    <input type="text" class="form-control" name="roomCapacityInput">
+                    <input type="text" class="form-control" name="roomCapacityInput" value="<%= salas.Capacidade %>">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary"> Atualizar </button>
             </form>
         </div>
         <img src="/img/bosch-line.png" class="fixed-bottom" alt="">
