finalization of server

--- a/src/view/cadAluno.ejs
+++ b/src/view/cadAluno.ejs
@@ -82,7 +82,7 @@
                                 <% } %>
                             <% } %>
                         <% } else { %>
-                            <option disabled>No rooms available</option>
+                            <option disabled>Sem salas disponíveis</option>
                         <% } %>
                     </select>
                 </div>
